force-app/objects/Bid_SE__c/Bid_SE__c.object-meta.xml
<CustomObject>
    <label>Bid SE</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bids SE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>