force-app/objects/Bid_SE__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>If(Comment__c !=&apos;&apos; ,Comment__c , SUBSTITUTE(Opportunity__r.Account.Name,&quot;\&quot;&quot;,&quot;&apos;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>