force-app/objects/Bid_SE__c/fields/BA__c.field-meta.xml
<CustomField>
    <fullName>BA__c</fullName>
    <formula>IF(OR(INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;BA&quot;), INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;Business Advisory&quot;)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA</label>
    <type>Checkbox</type>
</CustomField>