force-app/objects/Bid_SE__c/fields/BID_Number__c.field-meta.xml
<CustomField>
    <fullName>BID_Number__c</fullName>
    <label>BID Number</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>