force-app/objects/Bid_SE__c/fields/BID_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>BID_Portal_URL__c</fullName>
    <formula>BID_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BID Portal URL</label>
    <type>Text</type>
</CustomField>