force-app/objects/Bid_SE__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>Set to &apos;Not in use&apos; to add prefix to Account name</inlineHelpText>
    <label>Comment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>