force-app/objects/Bid_SE__c/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <formula>IF(INCLUDES( Opportunity__r.Business_Unit_SE__c , &quot;Core&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core</label>
    <type>Checkbox</type>
</CustomField>