force-app/objects/Bid_SE__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>CASE(TEXT(Opportunity__r.Account.Country__c), &apos;Sweden&apos;, &apos;Sverige&apos;,
&apos;Norway&apos;, &apos;Norge&apos;,
&apos;Denmark&apos;, &apos;Danmark&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>