force-app/objects/Bid_SE__c/fields/Is_Bid_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Bid_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Bid Changed</label>
    <type>Checkbox</type>
</CustomField>