force-app/objects/Bid_SE__c/fields/Is_created_in_Bid_portal__c.field-meta.xml
<CustomField>
    <fullName>Is_created_in_Bid_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is created in Bid portal</label>
    <type>Checkbox</type>
</CustomField>