force-app/objects/Bid_SE__c/fields/Manual_Flow__c.field-meta.xml
<CustomField>
    <fullName>Manual_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Flow</label>
    <type>Checkbox</type>
</CustomField>