force-app/objects/Bid_SE__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>TEXT(Opportunity__r.StageName )+ 
CASE(LEFT(TEXT(Opportunity__r.StageName),1),
&apos;1&apos;,&apos;&apos;,
&apos;2&apos;, &apos; - &apos; + TEXT(Opportunity__r.Status__c),
&apos;3&apos;,&apos; - &apos; + TEXT(Opportunity__r.Status__c),
&apos;4&apos;, &apos; - &apos; + TEXT(Opportunity__r.Status__c),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>