force-app/objects/Bid_SE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Account_Name__c</columns>
    <columns>BID_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_created_in_Bid_portal__c</columns>
    <columns>Status__c</columns>
    <columns>Apps__c</columns>
    <columns>Manual_Flow__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>